GetServicesusingKubeConfig/TCP Routing/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencost
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9003
      protocol: TCP
      targetPort: 9003
  selector:
    app.kubernetes.io/name: opencost
